# obs-studio

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL.rst  README.rst  azure-pipelines.yml  buid_create.bat  build_osn_configure.bat  build_osn_configure.sh  build_osn_full.bat  build_osn_full.sh  build_osn_install.bat  build_osn_install.sh  build_slobs_compile.bat  build_slobs_compile.sh  build_slobs_install.bat  build_slobs_install.sh  build_studio_configure.bat  build_studio_configure.sh  build_studio_full.bat  build_studio_full.sh  build_studio_install.sh  buildspec.json  slobs-appveyor.yml  slobs-azure-pipelines.yml
CI/: build.cmd  check-format.sh
UI/: auth-oauth.cpp  window-basic-auto-config.cpp  window-basic-main-outputs.cpp  window-basic-main.hpp  window-basic-vcam-config.cpp
dependencies/: enc-amf-test64.exe.txt  image-source.dll.txt  libcef.dll.txt  libobs-d3d11.dll.txt  obs-browser.dll.txt  obs-filters.dll.txt  obs-nvenc-test.exe.txt  obs-qsv11.dll.txt  obs.dll.txt  rtmp-services.dll.txt  text-freetype2.dll.txt  vlc-video.dll.txt  win-wasapi.dll.txt
libobs-d3d11/: d3d11-rebuild.cpp  d3d11-subsystem.cpp  d3d11-subsystem.hpp  d3d11-texture2d.cpp
libobs-opengl/: gl-cocoa.m  gl-helpers.h  gl-indexbuffer.c  gl-subsystem.c  (+4 more)
plugins/screen-capture/: CMakeLists.txt  screen-capture.cpp
plugins/slobs-capture/: CMakeLists.txt  helpers.cpp  helpers.h  slobs-capture.cpp
plugins/win-wasapi/: CMakeLists.txt  enum-wasapi.cpp  enum-wasapi.hpp  plugin-main.cpp  win-wasapi-app.cpp  win-wasapi-app.hpp  win-wasapi.cpp
plugins/win-wasapi/data/locale/: en-US.ini
(+231 files in other folders)
